src/objects/AcctSeed__AS_Commit_Event__e.object
<CustomObject>
    <description>An Accounting Seed event published after commit.</description>
    <fields>
        <fullName>AcctSeed__Payload__c</fullName>
        <description>JSON payload of the event</description>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Request_Id__c</fullName>
        <description>Identifier for the event.</description>
        <label>Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AS Commit Event</label>
    <pluralLabel>AS Commit Events</pluralLabel>
</CustomObject>